--- a/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
@@ -12,15 +12,23 @@
                 <h1 class="text-xl">Details</h1>
                 <h1 class="text-2xl font-bold text-gray-800 mb-4">Type 2 Diabetes Risk Assessment Form</h1>
             </div>
-            <div>
-                <a asp-action="Edit" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
+            <div class="flex justify-end mb-6 gap-3">
+                <div class="bg-blue-500 hover:bg-blue-600 inline-flex items-center text-white py-2 px-5 rounded-lg w-28">
+                    <button type="button"@*  onclick="print('Print', 'PregnancyRecord', '@Model.HouseholdNo', '@Model.PregnancyRecord.Id', '@Model.PregnancyRecord.PatientId')" *@>
+                        <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                            <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
+                        </svg>
+                        <span class="hidden md:inline text-sm">Print</span>
+                    </button>
+                </div>
+                <a asp-action="Edit" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
                         <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
                     </svg>
                     Update
                 </a>
-                <button data-modal-target="popup-modal-2" data-member-id="@Model.DiabetesRisk.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
+                <button data-modal-target="popup-modal-2" data-member-id="@Model.DiabetesRisk.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
                     </svg>
@@ -38,12 +46,12 @@
                         </svg>
                         <span class="sr-only">Close modal</span>
                     </button>
-                    <form id="deleteForm" asp-action="Delete" asp-controller="PregnancyTracking" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">
+                    <form id="deleteForm" asp-action="Delete" asp-controller="DiabetesRisk" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">
                         <div class="p-4 md:p-5 text-center">
                             <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                             </svg>
-                            <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete this household member?</h3>
+                            <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete this Type 2 Diabetes Risk Assessment Form?</h3>
                             <button data-modal-hide="popup-modal-2" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancel</button>
                             <button data-modal-hide="popup-modal-2" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
                                 Yes, I'm sure
