--- a/AUF.EMR.MVC/Views/DiabetesRisk/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Edit.cshtml
@@ -217,7 +217,7 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="Index" asp-controller="DiabetesRisk" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
+                <a asp-action="Details" asp-controller="DiabetesRisk" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Add</button>
             </div>
         </form>
