--- a/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_FormSideBar.cshtml
@@ -241,11 +241,11 @@
                     @{
                         if ((controller.Equals("DiabetesRisk") || controller.Equals("DiabetesRisk")) && inCrud)
                         {
-                            <img src="~/img/Nav/memo-circle-check.png" class="w-5 h-5" />
+                            <img src="~/img/Nav/blood.png" class="w-5 h-5" />
                         }
                         else
                         {
-                            <img src="~/img/Nav/memo-circle-check-dark.png" class="w-5 h-5" />
+                            <img src="~/img/Nav/blood-dark.png" class="w-5 h-5" />
                         }
                     }
                     <span class="flex-1 ms-3 whitespace-nowrap">Diabetes Risk</span>
