✏️: Fix 'glucode' typo in create and edit diabetes risk pages

--- a/AUF.EMR.MVC/Views/DiabetesRisk/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Edit.cshtml
@@ -187,7 +187,7 @@
                         <h6 class="text-md font-bold text-gray-800">High Blood Glucose</h6>
                     </div>
                     <div class="mb-4">
-                        <label class="block mb-2 text-sm font-medium text-gray-700">Have you ever been found to have high blood glucode (eg. in a health examination, during an illness, during pregnancy?</label>
+                        <label class="block mb-2 text-sm font-medium text-gray-700">Have you ever been found to have high blood glucose (eg. in a health examination, during an illness, during pregnancy?</label>
                         <div class="">
                             <div class="flex items-center me-4">
                                 <input asp-for="DiabetesRisk.HasHighBloodGlucose" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
