--- a/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailDiabetesRiskVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Diabetes Assessment Risk Form - Details";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
@@ -101,9 +101,9 @@
                         @(
                             (int)Model.DiabetesRisk.BmiRiskPoints switch
                             {
-                                0 => "0 pts - Lower than 25 km/m²",
-                                1 => "1 pts - 25-30 km/m²",
-                                3 => "3 pts - Higher than 30 km/m²",
+                                0 => "0 pts - Lower than 25 kg/m²",
+                                1 => "1 pts - 25-30 kg/m²",
+                                3 => "3 pts - Higher than 30 kg/m²",
                             }
                             )
                     </dd>
