✨: Display Diabetes Risk details in the dashboard page - Create new methods in both repo and service classes

--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -145,7 +145,7 @@
         <script>
             var options = {
                 series: [{
-                    data: [@Model.FamilyPlanningFormsCount, @Model.PatientRecordCount, @Model.PregnancyRecordCount, @Model.PregTrackCount, @Model.WRAFormCount]
+                    data: [@Model.FamilyPlanningFormsCount, @Model.PatientRecordCount, @Model.PregnancyRecordCount, @Model.PregTrackCount, @Model.WRAFormCount, @Model.DiabetesRiskRecordCount]
                 }],
                 chart: {
                     type: 'bar',
@@ -179,7 +179,7 @@
                     enabled: false
                 },
                 xaxis: {
-                    categories: ['Family Planning', 'Patient Record', 'Pregnancy Record', 'Pregnancy Track', "Women of Reproductive Age"],
+                    categories: ['Family Planning', 'Patient Record', 'Pregnancy Record', 'Pregnancy Track', "Women of Reproductive Age", 'Diabetes Risk Assessment'],
                     labels: {
                         style: {
                             fontFamily: 'Poppins'
