🦺: Add popups for validation in creating diabetes risk - Edit the entity fields to be nullable but required

--- a/AUF.EMR.MVC/Views/DiabetesRisk/Create.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container mx-auto px-4 py-8">
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
-        <form asp-action="Create">
+        <form asp-action="Create" id="createForm">
             <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             @* <input type="hidden" asp-for="HouseholdMemberId" value="@Model.HouseholdMemberId" /> *@
@@ -24,7 +24,8 @@
                 @await Html.PartialAsync("../Shared/Popups/_DiabetesRiskInfo")
                 <div class="flex justify-between">
                     <h1 class="text-2xl font-bold text-gray-800 mb-4">Type 2 Diabetes Risk Assessment Form</h1>
-                    <h1 class="text-xl font-bold text-gray-800 mb-4">Risk Score: 
+                    <h1 class="text-xl font-bold text-gray-800 mb-4">
+                        Risk Score:
                         <span id="riskScore" class="text-green-500">0 - Low</span>
                     </h1>
                 </div>
@@ -58,7 +59,7 @@
                             <option value="3">55-64 years old - 3 pts</option>
                             <option value="4">Over 64 years old - 4 pts</option>
                         </select>
-                        <span asp-validation-for="DiabetesRisk.AgeRiskPoints" class="block mb-2 text-sm text-red-700"></span>
+                        <span id="ageValidation"  asp-validation-for="DiabetesRisk.AgeRiskPoints" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <!-- BMI -->
                     <div class="mb-2 mt-8 w-full md:w-4/5 flex justify-between">
@@ -221,6 +222,27 @@
     </div>
 </div>
 
+<div id="errorModal" tabindex="-1" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
+    <div class="relative p-4 w-full max-w-md">
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <button type="button" onclick="closeModal()" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="p-4 md:p-5 text-center">
+                <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+                <h3 class="mb-5 text-lg font-normal text-gray-500">The form is not complete. Please fill in all required fields.</h3>
+                <button onclick="closeModal()" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
@@ -270,14 +292,14 @@
                 // Get points for radio options
                 const physicalActivityRisk = Array.from(physicalActivityInputs).find(input => input.checked)?.value === "false" ? 2 : 0;
                 const vegetableIntakeRisk = Array.from(vegetableIntakeInputs).find(input => input.checked)?.value === "false" ? 1 : 0;
-                const highBloodPressureRisk = Array.from(highBloodPressureInputs).find(input => input.checked)?.value === "false" ? 0 : 2;
-                const highBloodGlucoseRisk = Array.from(highBloodGlucoseInputs).find(input => input.checked)?.value === "false" ? 0 : 5;
+                const highBloodPressureRisk = Array.from(highBloodPressureInputs).find(input => input.checked)?.value === "true" ? 2 : 0;
+                const highBloodGlucoseRisk = Array.from(highBloodGlucoseInputs).find(input => input.checked)?.value === "true" ? 5 : 0;
 
                 // Sum up the risk score
                 riskScore = ageRisk + bmiRisk + familyRisk + waistRisk + physicalActivityRisk + vegetableIntakeRisk + highBloodPressureRisk + highBloodGlucoseRisk;
 
                 // Remove all previous color classes
-                riskScoreDisplay.classList.remove("text-green-400", "text-yellow-400", "text-orange-500", "text-pink-500", "text-red-500");
+                riskScoreDisplay.classList.remove("text-green-500", "text-yellow-500", "text-orange-500", "text-pink-500", "text-red-600");
 
                 // Add the appropriate color class based on the risk score
                 if (riskScore < 7) {
@@ -303,6 +325,7 @@
             const selectedOption = this.options[this.selectedIndex];
             const age = parseInt(selectedOption.getAttribute("data-age"));
             const ageDropdown = document.getElementById("ageDropdown");
+            const ageValidation = document.getElementById("ageValidation");
             const sex = selectedOption.getAttribute('data-sex');
             const waistCircumferenceForMen = document.getElementById("waistCircumferenceMen");
             const waistCircumferenceForWomen = document.getElementById("waistCircumferenceWomen");
@@ -326,22 +349,32 @@
                 // Disable the dropdown
                 ageDropdown.disabled = true;
                 hiddenAgeField.value = ageDropdown.value;
+                ageValidation.style.display = "none";
             } else {
                 // If no member is selected, reset the dropdown
                 ageDropdown.disabled = false; // Allow selection if no member is selected
                 hiddenAgeField.value = this.value;
+                ageValidation.style.display = "block";
             }
 
             // Handle sex waist circumference fields visibility
             if (sex === 'M') {
                 waistCircumferenceForMen.style.display = "block";
+                waistCircumferenceForMen.setAttribute("required", "required");
                 waistCircumferenceForWomen.style.display = "none";
+                waistCircumferenceForWomen.value = "";
+                waistCircumferenceForWomen.removeAttribute("required");
                 waistCircumferenceForWomenValidation.style.display = "none";
+                waistCircumferenceForMenValidation.style.display = "block";
             }
             else {
                 waistCircumferenceForMen.style.display = "none";
+                waistCircumferenceForWomen.setAttribute("required", "required");
                 waistCircumferenceForMenValidation.style.display = "none";
                 waistCircumferenceForWomen.style.display = "block";
+                waistCircumferenceForWomenValidation.style.display = "block";
+                waistCircumferenceForMen.removeAttribute("required");
+                waistCircumferenceForMen.value = "";
             }
 
             // Dispatch a change event
@@ -409,5 +442,22 @@
         // Add event listeners for real-time BMI calculation
         document.getElementById("heightInput").addEventListener("input", calculateBmi);
         document.getElementById("weightInput").addEventListener("input", calculateBmi);
+    </script>
+
+    <script>
+        document.getElementById("createForm").addEventListener("submit", function (event) {
+            if (!this.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+
+                // Show modal
+                document.getElementById("errorModal").classList.remove("hidden");
+
+            }
+        });
+
+        function closeModal() {
+            document.getElementById("errorModal").classList.add("hidden");
+        }
     </script>
 }
